grammars/pdl.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module IJTAG
  module PDL
    module Grammar
      include Treetop::Runtime

      def root
        @root ||= :pdl_source
      end

      module PdlSource0
        def to_ast
          n :pdl_source, *elements.map{ |e| e.to_ast if e.respond_to?(:to_ast) }.compact, input: input, interval: interval, file: file
        end
      end

      def _nt_pdl_source
        start_index = index
        if node_cache[:pdl_source].has_key?(index)
          cached = node_cache[:pdl_source][index]
          if cached
            node_cache[:pdl_source][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        s0, i0 = [], index
        loop do
          r1 = _nt_pdlSource_items
          if r1
            s0 << r1
          else
            break
          end
        end
        if s0.empty?
          @index = i0
          r0 = nil
        else
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(PdlSource0)
        end

        node_cache[:pdl_source][start_index] = r0

        r0
      end

      def _nt_pdlSource_items
        start_index = index
        if node_cache[:pdlSource_items].has_key?(index)
          cached = node_cache[:pdlSource_items][index]
          if cached
            node_cache[:pdlSource_items][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_S
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_sl_comment
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            r3 = _nt_eoc
            if r3
              r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
              r0 = r3
            else
              r4 = _nt_pdl_level_def
              if r4
                r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
                r0 = r4
              else
                r5 = _nt_iprocsformodule_def
                if r5
                  r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                  r0 = r5
                else
                  r6 = _nt_iuseprocnamespace_def
                  if r6
                    r6 = SyntaxNode.new(input, (index-1)...index) if r6 == true
                    r0 = r6
                  else
                    r7 = _nt_iproc_def
                    if r7
                      r7 = SyntaxNode.new(input, (index-1)...index) if r7 == true
                      r0 = r7
                    else
                      @index = i0
                      r0 = nil
                    end
                  end
                end
              end
            end
          end
        end

        node_cache[:pdlSource_items][start_index] = r0

        r0
      end

      module SlComment0
      end

      module SlComment1
        def N
          elements[2]
        end
      end

      def _nt_sl_comment
        start_index = index
        if node_cache[:sl_comment].has_key?(index)
          cached = node_cache[:sl_comment][index]
          if cached
            node_cache[:sl_comment][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?("#", false, index))
          r1 = true
          @index += match_len
        else
          terminal_parse_failure('"#"')
          r1 = nil
        end
        s0 << r1
        if r1
          s2, i2 = [], index
          loop do
            i3, s3 = index, []
            i4 = index
            r5 = _nt_N
            if r5
              @index = i4
              r4 = nil
            else
              @index = i4
              r4 = instantiate_node(SyntaxNode,input, index...index)
            end
            s3 << r4
            if r4
              if index < input_length
                r6 = true
                @index += 1
              else
                terminal_parse_failure("any character")
                r6 = nil
              end
              s3 << r6
            end
            if s3.last
              r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
              r3.extend(SlComment0)
            else
              @index = i3
              r3 = nil
            end
            if r3
              s2 << r3
            else
              break
            end
          end
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          s0 << r2
          if r2
            r7 = _nt_N
            s0 << r7
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(SlComment1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:sl_comment][start_index] = r0

        r0
      end

      module PdlLevelDef0
        def S1
          elements[1]
        end

        def level
          elements[2]
        end

        def S2
          elements[3]
        end

        def S3
          elements[5]
        end

        def version
          elements[6]
        end

        def s
          elements[7]
        end
      end

      module PdlLevelDef1
        def to_ast
          n :pdl_level_def, level.text_value, level.version, input: input, interval: interval, file: file
        end
      end

      def _nt_pdl_level_def
        start_index = index
        if node_cache[:pdl_level_def].has_key?(index)
          cached = node_cache[:pdl_level_def][index]
          if cached
            node_cache[:pdl_level_def][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?('iPDLLevel', false, index))
          r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
          @index += match_len
        else
          terminal_parse_failure('\'iPDLLevel\'')
          r1 = nil
        end
        s0 << r1
        if r1
          r2 = _nt_S
          s0 << r2
          if r2
            s3, i3 = [], index
            loop do
              if has_terminal?(@regexps[gr = '\A[0-9]'] ||= Regexp.new(gr), :regexp, index)
                r4 = true
                @index += 1
              else
                terminal_parse_failure('[0-9]')
                r4 = nil
              end
              if r4
                s3 << r4
              else
                break
              end
            end
            if s3.empty?
              @index = i3
              r3 = nil
            else
              r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
            end
            s0 << r3
            if r3
              r5 = _nt_S
              s0 << r5
              if r5
                if (match_len = has_terminal?('-version', false, index))
                  r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
                  @index += match_len
                else
                  terminal_parse_failure('\'-version\'')
                  r6 = nil
                end
                s0 << r6
                if r6
                  r7 = _nt_S
                  s0 << r7
                  if r7
                    s8, i8 = [], index
                    loop do
                      if has_terminal?(@regexps[gr = '\A[0-9a-zA-Z_]'] ||= Regexp.new(gr), :regexp, index)
                        r9 = true
                        @index += 1
                      else
                        terminal_parse_failure('[0-9a-zA-Z_]')
                        r9 = nil
                      end
                      if r9
                        s8 << r9
                      else
                        break
                      end
                    end
                    if s8.empty?
                      @index = i8
                      r8 = nil
                    else
                      r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
                    end
                    s0 << r8
                    if r8
                      r10 = _nt_s
                      s0 << r10
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(PdlLevelDef0)
          r0.extend(PdlLevelDef1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:pdl_level_def][start_index] = r0

        r0
      end

      module IprocsformoduleDef0
        def S1
          elements[0]
        end

        def S2
          elements[2]
        end

        def namespace
          elements[3]
        end
      end

      module IprocsformoduleDef1
        def S
          elements[1]
        end

        def name
          elements[2]
        end

        def d
          elements[3]
        end

        def eoc
          elements[4]
        end
      end

      module IprocsformoduleDef2
        def to_ast
          if d.respond_to?(:namespace)
            n :iprocsformodule_def, name.to_ast, d.namespace.to_ast, input: input, interval: interval, file: file
          else
            n :iprocsformodule_def, name.to_ast, input: input, interval: interval, file: file
          end
        end
      end

      def _nt_iprocsformodule_def
        start_index = index
        if node_cache[:iprocsformodule_def].has_key?(index)
          cached = node_cache[:iprocsformodule_def][index]
          if cached
            node_cache[:iprocsformodule_def][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?('iProcsForModule', false, index))
          r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
          @index += match_len
        else
          terminal_parse_failure('\'iProcsForModule\'')
          r1 = nil
        end
        s0 << r1
        if r1
          r2 = _nt_S
          s0 << r2
          if r2
            r3 = _nt_module_name
            s0 << r3
            if r3
              i5, s5 = index, []
              r6 = _nt_S
              s5 << r6
              if r6
                if (match_len = has_terminal?('-iProcNameSpace', false, index))
                  r7 = instantiate_node(SyntaxNode,input, index...(index + match_len))
                  @index += match_len
                else
                  terminal_parse_failure('\'-iProcNameSpace\'')
                  r7 = nil
                end
                s5 << r7
                if r7
                  r8 = _nt_S
                  s5 << r8
                  if r8
                    r9 = _nt_pdl_namespace_name
                    s5 << r9
                  end
                end
              end
              if s5.last
                r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
                r5.extend(IprocsformoduleDef0)
              else
                @index = i5
                r5 = nil
              end
              if r5
                r4 = r5
              else
                r4 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r4
              if r4
                r10 = _nt_eoc
                s0 << r10
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(IprocsformoduleDef1)
          r0.extend(IprocsformoduleDef2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:iprocsformodule_def][start_index] = r0

        r0
      end

      module IuseprocnamespaceDef0
        def S
          elements[1]
        end

        def name
          elements[2]
        end
      end

      module IuseprocnamespaceDef1
        def to_ast
          n :iuseprocnamespace_def, name.to_ast, input: input, interval: interval, file: file
        end
      end

      def _nt_iuseprocnamespace_def
        start_index = index
        if node_cache[:iuseprocnamespace_def].has_key?(index)
          cached = node_cache[:iuseprocnamespace_def][index]
          if cached
            node_cache[:iuseprocnamespace_def][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?('iUseProcNameSpace', false, index))
          r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
          @index += match_len
        else
          terminal_parse_failure('\'iUseProcNameSpace\'')
          r1 = nil
        end
        s0 << r1
        if r1
          r2 = _nt_S
          s0 << r2
          if r2
            i3 = index
            r4 = _nt_pdl_namespace_name
            if r4
              r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
              r3 = r4
            else
              if (match_len = has_terminal?('-', false, index))
                r5 = true
                @index += match_len
              else
                terminal_parse_failure('\'-\'')
                r5 = nil
              end
              if r5
                r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
                r3 = r5
              else
                @index = i3
                r3 = nil
              end
            end
            s0 << r3
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(IuseprocnamespaceDef0)
          r0.extend(IuseprocnamespaceDef1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:iuseprocnamespace_def][start_index] = r0

        r0
      end

      def _nt_iproc_def
        start_index = index
        if node_cache[:iproc_def].has_key?(index)
          cached = node_cache[:iproc_def][index]
          if cached
            node_cache[:iproc_def][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0 = index
        r1 = _nt_iproc_def_without_args
        if r1
          r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
          r0 = r1
        else
          r2 = _nt_iproc_def_with_args
          if r2
            r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
            r0 = r2
          else
            @index = i0
            r0 = nil
          end
        end

        node_cache[:iproc_def][start_index] = r0

        r0
      end

      module IprocDefWithArgs0
        def S
          elements[1]
        end

        def name
          elements[2]
        end

        def s1
          elements[3]
        end

        def s2
          elements[5]
        end

        def args
          elements[6]
        end

        def s3
          elements[7]
        end

        def s4
          elements[9]
        end

        def s5
          elements[11]
        end

        def commands
          elements[12]
        end

        def s6
          elements[13]
        end

        def eoc
          elements[15]
        end
      end

      module IprocDefWithArgs1
        def to_ast
          a1 = n :args, *args.elements.map{ |c| c.to_ast }
          a2 = n :commands, *commands.elements.map{ |c| c.to_ast }
          n :iproc_def, name.to_ast, a1, a2, input: input, interval: interval, file: file
        end
      end

      def _nt_iproc_def_with_args
        start_index = index
        if node_cache[:iproc_def_with_args].has_key?(index)
          cached = node_cache[:iproc_def_with_args][index]
          if cached
            node_cache[:iproc_def_with_args][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?('iProc', false, index))
          r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
          @index += match_len
        else
          terminal_parse_failure('\'iProc\'')
          r1 = nil
        end
        s0 << r1
        if r1
          r2 = _nt_S
          s0 << r2
          if r2
            r3 = _nt_procName
            s0 << r3
            if r3
              r4 = _nt_s
              s0 << r4
              if r4
                if (match_len = has_terminal?('{', false, index))
                  r5 = true
                  @index += match_len
                else
                  terminal_parse_failure('\'{\'')
                  r5 = nil
                end
                s0 << r5
                if r5
                  r6 = _nt_s
                  s0 << r6
                  if r6
                    s7, i7 = [], index
                    loop do
                      r8 = _nt_argument
                      if r8
                        s7 << r8
                      else
                        break
                      end
                    end
                    if s7.empty?
                      @index = i7
                      r7 = nil
                    else
                      r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
                    end
                    s0 << r7
                    if r7
                      r9 = _nt_s
                      s0 << r9
                      if r9
                        if (match_len = has_terminal?('}', false, index))
                          r10 = true
                          @index += match_len
                        else
                          terminal_parse_failure('\'}\'')
                          r10 = nil
                        end
                        s0 << r10
                        if r10
                          r11 = _nt_s
                          s0 << r11
                          if r11
                            if (match_len = has_terminal?('{', false, index))
                              r12 = true
                              @index += match_len
                            else
                              terminal_parse_failure('\'{\'')
                              r12 = nil
                            end
                            s0 << r12
                            if r12
                              r13 = _nt_s
                              s0 << r13
                              if r13
                                s14, i14 = [], index
                                loop do
                                  r15 = _nt_command
                                  if r15
                                    s14 << r15
                                  else
                                    break
                                  end
                                end
                                if s14.empty?
                                  @index = i14
                                  r14 = nil
                                else
                                  r14 = instantiate_node(SyntaxNode,input, i14...index, s14)
                                end
                                s0 << r14
                                if r14
                                  r16 = _nt_s
                                  s0 << r16
                                  if r16
                                    if (match_len = has_terminal?('}', false, index))
                                      r17 = true
                                      @index += match_len
                                    else
                                      terminal_parse_failure('\'}\'')
                                      r17 = nil
                                    end
                                    s0 << r17
                                    if r17
                                      r18 = _nt_eoc
                                      s0 << r18
                                    end
                                  end
                                end
                              end
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(IprocDefWithArgs0)
          r0.extend(IprocDefWithArgs1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:iproc_def_with_args][start_index] = r0

        r0
      end

      module IprocDefWithoutArgs0
        def s
          elements[1]
        end

      end

      module IprocDefWithoutArgs1
        def S
          elements[1]
        end

        def name
          elements[2]
        end

        def s1
          elements[3]
        end

        def s2
          elements[5]
        end

        def s3
          elements[7]
        end

        def commands
          elements[8]
        end

        def s4
          elements[9]
        end

        def eoc
          elements[11]
        end
      end

      module IprocDefWithoutArgs2
        def to_ast
          a1 = n :args
          a2 = n :commands, *commands.elements.map{ |c| c.to_ast }
          n :iproc_def, name.to_ast, a1, a2, input: input, interval: interval, file: file
        end
      end

      def _nt_iproc_def_without_args
        start_index = index
        if node_cache[:iproc_def_without_args].has_key?(index)
          cached = node_cache[:iproc_def_without_args][index]
          if cached
            node_cache[:iproc_def_without_args][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        if (match_len = has_terminal?('iProc', false, index))
          r1 = instantiate_node(SyntaxNode,input, index...(index + match_len))
          @index += match_len
        else
          terminal_parse_failure('\'iProc\'')
          r1 = nil
        end
        s0 << r1
        if r1
          r2 = _nt_S
          s0 << r2
          if r2
            r3 = _nt_procName
            s0 << r3
            if r3
              r4 = _nt_s
              s0 << r4
              if r4
                i6, s6 = index, []
                if (match_len = has_terminal?('{', false, index))
                  r7 = true
                  @index += match_len
                else
                  terminal_parse_failure('\'{\'')
                  r7 = nil
                end
                s6 << r7
                if r7
                  r8 = _nt_s
                  s6 << r8
                  if r8
                    if (match_len = has_terminal?('}', false, index))
                      r9 = true
                      @index += match_len
                    else
                      terminal_parse_failure('\'}\'')
                      r9 = nil
                    end
                    s6 << r9
                  end
                end
                if s6.last
                  r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                  r6.extend(IprocDefWithoutArgs0)
                else
                  @index = i6
                  r6 = nil
                end
                if r6
                  r5 = r6
                else
                  r5 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r5
                if r5
                  r10 = _nt_s
                  s0 << r10
                  if r10
                    if (match_len = has_terminal?('{', false, index))
                      r11 = true
                      @index += match_len
                    else
                      terminal_parse_failure('\'{\'')
                      r11 = nil
                    end
                    s0 << r11
                    if r11
                      r12 = _nt_s
                      s0 << r12
                      if r12
                        s13, i13 = [], index
                        loop do
                          r14 = _nt_command
                          if r14
                            s13 << r14
                          else
                            break
                          end
                        end
                        if s13.empty?
                          @index = i13
                          r13 = nil
                        else
                          r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
                        end
                        s0 << r13
                        if r13
                          r15 = _nt_s
                          s0 << r15
                          if r15
                            if (match_len = has_terminal?('}', false, index))
                              r16 = true
                              @index += match_len
                            else
                              terminal_parse_failure('\'}\'')
                              r16 = nil
                            end
                            s0 << r16
                            if r16
                              r17 = _nt_eoc
                              s0 << r17
                            end
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(IprocDefWithoutArgs1)
          r0.extend(IprocDefWithoutArgs2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:iproc_def_without_args][start_index] = r0

        r0
      end

      module ModuleName0
        def icl_namespace_name
          elements[0]
        end

      end

      module ModuleName1
        def SCALAR_ID
          elements[1]
        end
      end

      module ModuleName2
        def to_ast
          text_value
        end
      end

      def _nt_module_name
        start_index = index
        if node_cache[:module_name].has_key?(index)
          cached = node_cache[:module_name][index]
          if cached
            node_cache[:module_name][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i2, s2 = index, []
        r3 = _nt_icl_namespace_name
        s2 << r3
        if r3
          if (match_len = has_terminal?('::', false, index))
            r4 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'::\'')
            r4 = nil
          end
          s2 << r4
        end
        if s2.last
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          r2.extend(ModuleName0)
        else
          @index = i2
          r2 = nil
        end
        if r2
          r1 = r2
        else
          r1 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r1
        if r1
          r5 = _nt_SCALAR_ID
          s0 << r5
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ModuleName1)
          r0.extend(ModuleName2)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:module_name][start_index] = r0

        r0
      end

      def _nt_instancePath
        start_index = index
        if node_cache[:instancePath].has_key?(index)
          cached = node_cache[:instancePath][index]
          if cached
            node_cache[:instancePath][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        r0 = _nt_dot_id

        node_cache[:instancePath][start_index] = r0

        r0
      end

      module ScanInterfaceName0
        def instancePath
          elements[0]
        end

      end

      module ScanInterfaceName1
        def SCALAR_ID
          elements[1]
        end
      end

      def _nt_scanInterface_name
        start_index = index
        if node_cache[:scanInterface_name].has_key?(index)
          cached = node_cache[:scanInterface_name][index]
          if cached
            node_cache[:scanInterface_name][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        i0, s0 = index, []
        i2, s2 = index, []
        r3 = _nt_instancePath
        s2 << r3
        if r3
          if (match_len = has_terminal?('.', false, index))
            r4 = true
            @index += match_len
          else
            terminal_parse_failure('\'.\'')
            r4 = nil
          end
          s2 << r4
        end
        if s2.last
          r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
          r2.extend(ScanInterfaceName0)
        else
          @index = i2
          r2 = nil
        end
        if r2
          r1 = r2
        else
          r1 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r1
        if r1
          r5 = _nt_SCALAR_ID
          s0 << r5
        end
        if s0.last
          r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
          r0.extend(ScanInterfaceName1)
        else
          @index = i0
          r0 = nil
        end

        node_cache[:scanInterface_name][start_index] = r0

        r0
      end

      def _nt_port
        start_index = index
        if node_cache[:port].has_key?(index)
          cached = node_cache[:port][index]
          if cached
            node_cache[:port][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
            @index = cached.interval.end
          end
          return cached
        end

        r0 = _nt_hier_signal

        node_cache[:port][start_index] = r0

        r0
      end
